<?xml version="1.0"?>
<package>
  <name>rosutils</name>
  <version>0.0.1</version>
  <description>ROS Utility Scripts</description>

  <!-- Contact info -->
  <maintainer email="chutsu@gmail.com">Chris Choi</maintainer>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosbag</run_depend>

  <!-- License -->
  <license>MIT</license>
</package>
